--- a/style.css
+++ b/style.css
@@ -1,3 +1,98 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  background: linear-gradient(to bottom, #000000, #434343);
+  color: whitesmoke;
+}
+
+.title {
+  position: relative;
+  text-transform: uppercase;
+  font-family: 'Oxanium', sans-serif;
+  font-weight: 600;
+  font-size: 10em;
+  line-height: 0.8;
+  padding: 30px;
+  background-color: black;
+}
+
+.intro {
+  position: relative;
+  top: -30px;
+  font-family: 'Raleway', sans-serif;
+  color: whitesmoke;
+}
+
+input {
+  width: 100px;
+  font-size: 2.5rem;
+}
+
+#playTo {
+  position: relative;
+  text-align: center;
+  font-family: 'Oxanium', sans-serif;
+  top: 14px;
+  text-transform: uppercase;
+  font-size: 50px;
+}
+
 .winner {
   color: green;
+}
+
+#scoreboard {
+  position: relative;
+  top: 10px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 15em;
+}
+
+.btn {
+  border: 0;
+  font-size: 30px;
+  background-color: #232323;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  box-shadow: 0px 0px 0px 3px dimgray;
+  box-shadow: 0px 1px 3px 0px whitesmoke;
+  color: white;
+
+}
+
+.resetBtn {
+  background-color: #232323;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  text-transform: uppercase;
+  font-family: 'Oxanium', sans-serif;
+  color: whitesmoke;
+  box-shadow: 0px 0px 0px 3px dimgray;
+  box-shadow: 0px 1px 3px 0px whitesmoke;
+
+}
+
+.playerButtons {
+  display: inline-flex;
+  justify-content: space-evenly;
+  position: relative;
+  top: 10vh;
+  width: 30%;
+}
+
+.resetContainer {
+  position: relative;
+  display: block;
+  top: 20vh;
 }
